# mafia_qa

./: .env.example  .gitignore  README.md  pyproject.toml
documents/: terminology.docx
src/: consts.py  script_utils.py
src/model-service/: api.py  api_config.yaml.example
src/qa-service/: api.py  api_config.yaml.example  init_db.py
