[tool.poetry]
name = "mafia_qa"
version = "0.1.0"
description = ""
authors = ["Olga Lipina <neon_alfa@mail.ru>"]
readme = "README.md"
packages = [{include = "mafia_qa"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"

[tool.poetry.group.call_qa]
optional = true

[tool.poetry.group.call_qa.dependencies]
weaviate-client = "^4.4.4"
chromadb = "^0.4.22"
docx2txt = "^0.8"
sentence-transformers = "^2.3.1"
faiss-cpu = "^1.7.4"
langchain = "^0.1.7"
langchain-community = "^0.0.20"
tiktoken = "^0.6.0"
langchain-openai = "^0.0.6"
langchainhub = "^0.1.14"
python-docx = "^1.1.0"


[tool.poetry.group.model]
optional = true

[tool.poetry.group.model.dependencies]
transformers = "^4.37.2"
torch = "^2.2.0"
accelerate = "^0.27.2"



[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
